--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@yoopta/toolbar": "^4.9.4",
     "@yoopta/video": "^4.9.4",
     "axios": "^1.7.7",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
