--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-intersection-observer": "^9.13.1",
     "react-scripts": "^5.0.1",
     "react-top-loading-bar": "^2.3.1",
+    "react-virtualized": "^9.22.6",
     "react-zoom-pan-pinch": "^3.6.1",
     "recharts": "^2.15.0",
     "slate": "^0.112.0",
@@ -109,6 +110,7 @@
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-virtualized": "^9.22.2",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
