--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tanstack/react-query-devtools": "^5.59.19",
     "@tanstack/react-router": "^1.79.0",
     "@tanstack/react-table": "^8.20.6",
+    "@types/qrcode": "^1.5.5",
     "@yoopta/accordion": "^4.9.4",
     "@yoopta/action-menu-list": "^4.9.4",
     "@yoopta/blockquote": "^4.9.4",
@@ -79,6 +80,7 @@
     "lucide-react": "^0.454.0",
     "next-themes": "^0.4.6",
     "npm": "^10.9.2",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-day-picker": "8.10.1",
