--- a/package.json
+++ b/package.json
@@ -15,118 +15,121 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@hookform/resolvers": "^3.9.1",
-    "@radix-ui/react-accordion": "^1.2.2",
-    "@radix-ui/react-alert-dialog": "^1.1.4",
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-checkbox": "^1.2.3",
-    "@radix-ui/react-collapsible": "^1.1.8",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-progress": "^1.1.2",
-    "@radix-ui/react-radio-group": "^1.2.3",
-    "@radix-ui/react-scroll-area": "^1.2.0",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.3.2",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-tooltip": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@shadcn/ui": "^0.0.4",
-    "@tanstack/react-query": "^5.59.19",
-    "@tanstack/react-query-devtools": "^5.59.19",
-    "@tanstack/react-router": "^1.79.0",
-    "@tanstack/react-table": "^8.20.6",
+    "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/react-query": "^5.87.4",
+    "@tanstack/react-query-devtools": "^5.87.4",
+    "@tanstack/react-router": "^1.131.41",
+    "@tanstack/react-table": "^8.21.3",
     "@types/qrcode": "^1.5.5",
-    "@yoopta/accordion": "^4.9.4",
-    "@yoopta/action-menu-list": "^4.9.4",
-    "@yoopta/blockquote": "^4.9.4",
-    "@yoopta/callout": "^4.9.4",
-    "@yoopta/code": "^4.9.4",
-    "@yoopta/divider": "^4.9.4",
-    "@yoopta/editor": "^4.9.4",
-    "@yoopta/embed": "^4.9.4",
-    "@yoopta/file": "^4.9.4",
-    "@yoopta/headings": "^4.9.4",
-    "@yoopta/image": "^4.9.4",
-    "@yoopta/link": "^4.9.4",
-    "@yoopta/link-tool": "^4.9.4",
-    "@yoopta/lists": "^4.9.4",
-    "@yoopta/marks": "^4.9.4",
-    "@yoopta/paragraph": "^4.9.4",
-    "@yoopta/table": "^4.9.4",
-    "@yoopta/toolbar": "^4.9.4",
-    "@yoopta/video": "^4.9.4",
-    "axios": "^1.7.7",
+    "@yoopta/accordion": "^4.9.9",
+    "@yoopta/action-menu-list": "^4.9.9",
+    "@yoopta/blockquote": "^4.9.9",
+    "@yoopta/callout": "^4.9.9",
+    "@yoopta/code": "^4.9.9",
+    "@yoopta/divider": "^4.9.9",
+    "@yoopta/editor": "^4.9.9",
+    "@yoopta/embed": "^4.9.9",
+    "@yoopta/file": "^4.9.9",
+    "@yoopta/headings": "^4.9.9",
+    "@yoopta/image": "^4.9.9",
+    "@yoopta/link": "^4.9.9",
+    "@yoopta/link-tool": "^4.9.9",
+    "@yoopta/lists": "^4.9.9",
+    "@yoopta/marks": "^4.9.9",
+    "@yoopta/paragraph": "^4.9.9",
+    "@yoopta/table": "^4.9.9",
+    "@yoopta/toolbar": "^4.9.9",
+    "@yoopta/video": "^4.9.9",
+    "axios": "^1.12.0",
     "canvas-confetti": "^1.9.3",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^11.12.0",
+    "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
     "i": "^0.3.7",
-    "i18next": "^24.0.5",
-    "i18next-browser-languagedetector": "^8.0.0",
-    "i18next-http-backend": "^3.0.1",
-    "jspdf": "^3.0.0",
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
+    "jspdf": "^3.0.2",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.454.0",
+    "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
-    "npm": "^10.9.2",
+    "npm": "^11.6.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
-    "react-datepicker": "^7.5.0",
-    "react-day-picker": "8.10.1",
+    "react-datepicker": "^8.7.0",
+    "react-day-picker": "9.9.0",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.0",
-    "react-hot-toast": "^2.4.1",
-    "react-i18next": "^15.1.3",
-    "react-icons": "^5.4.0",
-    "react-intersection-observer": "^9.13.1",
+    "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
+    "react-i18next": "^15.7.3",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-scripts": "^5.0.1",
-    "react-top-loading-bar": "^2.3.1",
+    "react-top-loading-bar": "^3.0.2",
     "react-virtualized": "^9.22.6",
-    "react-zoom-pan-pinch": "^3.6.1",
-    "recharts": "^2.15.0",
-    "slate": "^0.112.0",
-    "slate-react": "^0.112.1",
-    "sonner": "^2.0.1",
-    "tailwind-merge": "^2.5.4",
+    "react-zoom-pan-pinch": "^3.7.0",
+    "recharts": "^2.15.4",
+    "slate": "^0.102.0",
+    "slate-react": "^0.102.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.1.0",
+    "uuid": "^13.0.0",
+    "vite@latest": "link:@tanstack/router-plugin/vite@latest",
     "xlsx": "^0.18.5",
-    "zod": "^3.24.1"
+    "zod": "^4.1.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
-    "@tanstack/router-devtools": "^1.79.0",
-    "@tanstack/router-plugin": "^1.79.0",
-    "@types/lodash": "^4.17.13",
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@eslint/js": "^9.35.0",
+    "@tanstack/router-devtools": "^1.131.42",
+    "@tanstack/router-plugin": "^1.131.41",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^24.3.1",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "@types/react-virtualized": "^9.22.2",
     "@types/uuid": "^10.0.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.13.0",
-    "eslint-plugin-react-compiler": "19.0.0-beta-21e868a-20250216",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.11.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10",
-    "vite-tsconfig-paths": "^5.1.0"
+    "@vitejs/plugin-react-swc": "^4.0.1",
+    "autoprefixer": "^10.4.21",
+    "esbuild": "^0.25.9",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-compiler": "19.1.0-rc.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.4.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.43.0",
+    "vite": "^7.1.5",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
