--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "i18next": "^24.0.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^3.0.1",
+    "interactionpane": "^1.0.3",
     "jspdf": "^3.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
@@ -92,6 +93,7 @@
     "react-intersection-observer": "^9.13.1",
     "react-scripts": "^5.0.1",
     "react-top-loading-bar": "^2.3.1",
+    "react-use-gesture": "^9.1.3",
     "react-virtualized": "^9.22.6",
     "react-zoom-pan-pinch": "^3.6.1",
     "recharts": "^2.15.0",
